2004-07-07    <larus@HomeMachine>

	* Released SPIM 7.0

	* data.c (lcomm_directive) Philipp Lucas [phlucas@cs.uni-sb.de]:

2004-06-27    <larus@HomeMachine>

	* parser.y Philipp Lucas [phlucas@cs.uni-sb.de]:
	Freed wrong YACC variable in .comm and .label.

2004-06-05    <larus@HomeMachine>

	* PCSpim:
	Add Solution for building PCSpim with VC7 (PCSpim.VC7).

	* op.h [Dave]:
	Modified some FP opcodes to correct values.

2004-05-08    <larus@HomeMachine>

	* spim.c, xspim.c:
	Removed unused variable cycle_level.

2004-05-02    <larus@HomeMachine>

	* MainFrame.{cpp,h}, PCSpimView.{cpp,h}:
	Fixed updating of status line in PCSpim to conform to MFC convention

2004-04-24    <larus@HomeMachine>

	* parser.y run.c op.h:
	Changed MUL instruction from pseduo op to actual instruction.
	Fixed encoding of several instructions to correspond to hardware.

2004-03-28    <larus@HomeMachine>

	* run.c:
	Changed CP0 timer to poll on Unix, since signals interrupt system
	calls and affect SPIM's I/O.

2004-03-25    <larus@HomeMachine>

	* display-utils.c, xspim.c windows.c:
	Made X interfaces a bit more compact and regular. Works on a
	1024x768 screen.

2004-03-22    <larus@HomeMachine>

	* parser.y [Margaret M Reek [mmr@cs.rit.edu]]:
	Add, rather than subtract, in expression: imm - imm.

2004-03-21    <larus@HomeMachine>

	* pervasive:
	Cleaned up splint warnings.
	Replaced sprintf calls with str-stream abstraction.

2004-03-12    <larus@HomeMachine>

	* pervasive:
	Renamed "trap" to "exception" to reflect MIPS terminology.
	Renamed trap.handler to exceptions.s.

	* inst.c inst.h parser.y run.c:
	Fix internal representation of instructions by separating FS from
	RS field and moving it RD and RD to SHAMT.

	* scanner.l [Akim Demaille <akim@epita.fr>]:
	Improve handling of escape sequence in strings to bring it close
	to ISO C strings.

	* spim.c:
	Introduced short command line arguments.
	Assumed first argument not starting with '-' is file name.
